cmake_minimum_required(VERSION 3.10)

# set the project name and version
project(ACM VERSION 1.0)

# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
#add_executable(1279A Codeforces/contest/1279/A.cpp)
#add_executable(1279B Codeforces/contest/1279/B.cpp)
#add_executable(1279C Codeforces/contest/1279/C.cpp)
#add_executable(1279D Codeforces/contest/1279/D.cpp)
add_executable(1283D Codeforces/contest/1283/D.cpp)

